diesel_compile_tests/tests/fail/derive/belongs_to_second_parent.stderr
error: unknown attribute
  --> $DIR/belongs_to_second_parent.rs:29:26
   |
29 | #[diesel(belongs_to(Bar, Baz))]
   |                          ^^^
